--- a/Desktop/projects/Recreate AI/css/index.css
+++ b/Desktop/projects/Recreate AI/css/index.css
@@ -5,8 +5,26 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-.text-blue {
+.navbar-nav .nav-link {
   color: #44b2f8 !important;
+  font-weight: 500 !important;
+}
+
+.btn-blue {
+  background-color: #44b2f8;
+  color: white;
+  border-radius: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.btn-blue-outline {
+  border: 1px solid #44b2f8 !important;
+  border-radius: 30px;
+  color: #44b2f8;
+  padding-left: 20px;
+  padding-right: 20px;
 }
