--- a/Desktop/projects/Recreate AI/css/index.css
+++ b/Desktop/projects/Recreate AI/css/index.css
@@ -28,3 +28,8 @@ body {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.row .col-lg-6.grid-spacing {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
